# C-plus-plus-Assignment-5

./: CMakeLists.txt  knownrecipients.txt  main.cpp
config_generator/: CMakeLists.txt  generator.h  main.cpp
config_reader_lib/: library.h
